# snitchbot

./: README.md  pyproject.toml
snitchbot/: __main__.py  i18n.py  model.py  tasks.py
snitchbot/lib/: network.py
